discussion/kv_engine/181607/181607_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53859: Support per-document compression at persistence in magma

Couchstore always snappy compresses items before persisting them, even
if they were stored uncompressed. Magma does not require this, as it
applies block-level compression at a later stage.

However, it is desired that KV track the total compressed data size as
a predictor of how much memory a dataset would require to be fully
resident (active compression).

A later improvement may use this compressed document to update the
HashTable, as a re-implementation of active compression for persistent
buckets which is not dependent on walking the HT.

This also has the benefit that bgfetched/warmed up documents start out
compressed, rather than initially taking more memory until the
compressor visits them.

To support these goals, add support for having magma compress
individual documents, consistent with couchstore.

Change-Id: Ie89e18accc91c00f680e931ef260fed160fc7b92

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-11-01 15:34:40.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-01 15:57:07.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42712/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42712/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21653/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17: error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const [clang-diagnostic-error]
            if (op.Value.Empty()) {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/slice.h:70:10: note: "Empty" declared here
    bool Empty() {
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21653/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21653/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50896/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(1629): error C2662: "bool magma::Slice::Empty(void)": cannot convert "this" pointer from "const magma::Slice" to "magma::Slice &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50896/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11379/ : FAILURE

Compile error at [2022-11-01T15:37:07.243Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11379/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/392/ : FAILURE

Compile error at [2022-11-01T15:36:51.194Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:32:
error: passing ?const magma::Slice? as ?this? argument discards qualifiers [-fpermissive]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/392/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11470/ : FAILURE

Compile error at [2022-11-01T15:44:11.632Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:32:
error: passing ?const magma::Slice? as ?this? argument discards qualifiers [-fpermissive]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11470/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23689/ : FAILURE

Failure of GoogleTest "TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
[2022-11-01T15:52:49.147Z] unknown file: Failure
[2022-11-01T15:52:49.147Z] C++ exception with description "Failed to mutateWithMeta TransportProtocols_GetSetTest_ServerRejectsLargeSizeWithXattrCompressed_McbpSsl_XattrYes_JsonYes_SnappyYes : Temporary failure (134)" thrown in the test body.
[2022-11-01T15:52:49.147Z] [  FAILED  ] TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (267 ms)
TransportProtocols/GetSetTest.ServerRejectsLargeSizeWithXattrCompressed/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23689/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24097/ : FAILURE

Compile error at [2022-11-01T15:42:30.725Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:32:
error: passing ?const magma::Slice? as ?this? argument discards qualifiers [-fpermissive]
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24097/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24928/ : FAILURE

Compile error at [2022-11-01T15:44:23.951Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24928/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23128/ : FAILURE

Compile error at [2022-11-01T15:39:27.287Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23128/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32114/ : FAILURE

Compile error at [2022-11-01T15:46:31.076Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1629:17:
error: "this" argument to member function "Empty" has type "const magma::Slice", but function is not marked const
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32114/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20922/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
